<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:ignore="HardcodedText">
    <group
        android:id="@+id/nav_unicas">
        <item
            android:id="@+id/nav_mensajes"
            android:title="@string/mensaje"/>
        <item
            android:id="@+id/nav_tareas"
            android:title="@string/tareas"/>
        <item
            android:id="@+id/nav_guardias"
            android:title="@string/guardias"/>
    </group>
    <group
        android:id="@+id/nav_fijas">
        <item
            android:id="@+id/nav_reuniones"
            android:title="@string/reuniones"/>
        <item
            android:id="@+id/nav_notificaciones"
            android:title="@string/notificaciones"
            app:actionViewClass="android.widget.TextView"
            />
        <item
            android:id="@+id/nav_horario"
            android:title="@string/horario">

        </item>
    </group>
    <group
        android:id="@+id/nav_esenciales">
        <item
            android:id="@+id/nav_micuenta"
            android:title="@string/miCuenta"/>
        <item
            android:id="@+id/nav_cerrarSesion"
            android:title="@string/cerrarSesion"/>
    </group>
</menu>