<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Reuniones"
    android:background="@color/janna"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/iconoColegio"
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/icono"
        app:srcCompat="@mipmap/ic_launcher" />
    <Button
        android:id="@+id/botonCalendario"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:backgroundTint="@color/boton"
        android:textColor="@color/white"
        android:text="@string/calendario"/>
    <Button
        android:id="@+id/botonNotificaciones"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/boton"
        android:textColor="@color/white"
        android:text="@string/notificaciones"/>
    <Button
        android:id="@+id/botonConvocar"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/boton"
        android:textColor="@color/white"
        android:visibility="invisible"
        android:clickable="false"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/convocar">

    </Button>

</LinearLayout>