<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LauncherActivity"
    android:background="@color/janna">

    <ImageView
        android:id="@+id/iconoColegio"
        android:layout_width="match_parent"
        android:layout_height="115dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/icono"
        app:srcCompat="@mipmap/ic_launcher"
        android:layout_alignParentTop="true"/>

    <TextView
        android:layout_alignParentStart="true"
        android:layout_below="@+id/iconoColegio"
        android:id="@+id/textoUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:text="@string/usuario" />

    <EditText
        android:layout_below="@+id/textoUsuario"
        android:layout_centerInParent="true"
        android:id="@+id/contentUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_gravity="left"
        android:ems="17"
        android:inputType="text"
        tools:ignore="LabelFor,RtlHardcoded"
        android:autofillHints="username" />

    <TextView
        android:layout_below="@+id/contentUsername"
        android:id="@+id/textoContraseña"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:text="@string/contraseña" />

    <EditText
        android:layout_below="@+id/textoContraseña"
        android:layout_centerInParent="true"
        android:id="@+id/contentPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:ems="17"
        android:inputType="textPassword"
        android:autofillHints="password"
        tools:ignore="LabelFor" />
    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/contentPassword"
        android:layout_marginStart="20dp"
        android:layout_marginTop="7dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/checkBox"
        android:text="@string/mostrarContraseña"
        android:layout_below="@+id/contentPassword"
        android:layout_marginTop="20dp"/>
        <Button
            android:id="@+id/botonInicioSesion"
            android:text="@string/inicio"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginStart="25dp"
            android:backgroundTint="@color/boton"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/checkBox">
        </Button>

    <Button
        android:id="@+id/botonRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkBox"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="55dp"
        android:layout_alignParentEnd="true"
        android:backgroundTint="@color/boton"
        android:text="@string/registro"
        android:textColor="@color/white">

    </Button>

    <TextView
        android:id="@+id/textoSeMeHaOlvidadoLaContraseña"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contraseñaOlvidada"
        android:layout_marginTop="30dp"
        android:layout_centerInParent="true"
        android:layout_below="@+id/botonRegistro"
        >
    </TextView>
</RelativeLayout>